# DevBinStandards

./: AGENTS.md  aliases.sh  autoload_environment.zsh  camera_config_ui.py  colors.zsh  constants.zsh  diag_passthrough_1768623957.tgz  extract_copilot_instructions.sh  functions.zsh  generate_reboot_token.sh  k3s-pod.yaml  media_downloader.py  media_downloader_wrapper.sh  resize_windows.sh  rg_templates.zsh
.beads/: metadata.json
.claude/: settings.local.json
.github/: copilot-instructions.md
Users/jadennation/.config/nvim/: lazy-lock.json
Users/jadennation/.config/nvim/lua/plugins/: example.lua
ansible/: CHECKLIST.md  IMPLEMENTATION.md  Makefile  QUICK_START.md  README.md  ansible.cfg  inventory.ini  playbook.yml
ansible/FEATURES/: 00.md
ansible/ansible_MOD/: full_zshrc  inventory.ini  remote_zshrc  setup.yml
ansible/files/: remote_zshrc
ansible/tasks/: copy_config_files.yml  install_packages.yml  setup_docker.yml  setup_golang.yml  setup_neovim.yml  setup_python.yml  setup_ssh_keys.yml  setup_tailscale.yml  setup_vscode_server.yml  setup_zsh.yml
ansible/templates/: vscode-tunnel.service.j2
cyclops/rosdoyle_setup/: config.txt  first_boot_setup.sh  hostname  userconf.txt
cyclops/rosdoyle_setup/setup_files/: authorized_keys  camera_config_ui.py  camera_config_ui.service  crash-recovery.service  crash_detector.zsh  mediamtx.service  mediamtx.yml  pi_camera_capture.conf  pi_camera_capture.py  pi_camera_capture.service  pi_camera_capture.sh  pi_camera_capture_wrapper.sh  zshrc
features/: autoload_env_parity.md
hazel_replacement/: README.md  com.user.hazel-replacement.plist.template  com.user.sharktopus.plist.template  config.yaml  hazel_service.py  install.sh  pyproject.toml  sharktopus.py  uninstall.sh
hazel_replacement/tests/: test_sharktopus.py
mint_an_nft/: mint.js  package-lock.json  package.json  wallet.json
python/kagi/: README.md  main.py  pyproject.toml
python/tavilySearch/: README.md  main.py  pyproject.toml
python/tavilySearch/.github/: copilot-instructions.md
resources/: barneythecat_custom_path.zsh  barneythecat_zshrc  raw_curl
system_archetypes/: ubuntu.md
test_data/: app_config.ini  database.py  project_notes.md  users.csv
